--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,9 @@ phpunit.phar
 /frontend/web/index.php
 /frontend/web/index-test.php
 /frontend/web/robots.txt
-/frontend/web/css
+/frontend/web/css/
+/frontend/web/vendors/
 /backend/web/index.php
 /backend/web/index-test.php
 /backend/web/robots.txt
-/backend/web/css
+/backend/web/css/
