--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-frontend/web/css/* linguist-vendored
-frontend/web/vendors/* linguist-vendored
-backend/web/css/* linguist-vendored
+Restaurant/frontend/web/css/* linguist-vendored
+Restaurant/frontend/web/vendors/* linguist-vendored
+Restaurant/backend/web/css/* linguist-vendored
